--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="245dp"
-            android:text="Log In"
+            android:text="@string/log_in_to_your_account"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="22sp"
