--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -114,11 +114,26 @@
             android:textColorHint="@color/black"
             android:textColor="@color/black" />
 
+        <EditText
+            android:id="@+id/create_email"
+            android:layout_width="250dp"
+            android:layout_height="40dp"
+            android:layout_below="@+id/create_birthday"
+            android:layout_centerHorizontal="true"
+            android:ems="10"
+            android:background="@color/colorBasic"
+            android:layout_marginTop="10dp"
+            android:inputType="text"
+            android:hint="Email:"
+            android:paddingHorizontal="10dp"
+            android:textColorHint="@color/black"
+            android:textColor="@color/black" />
+
         <Button
             android:id="@+id/create_user"
             android:layout_width="110dp"
             android:layout_height="30dp"
-            android:layout_below="@+id/create_birthday"
+            android:layout_below="@+id/create_email"
             android:layout_centerHorizontal="true"
             android:background="@color/black"
             android:layout_marginTop="10dp"
