3/18 - Added Landing Page (Beta)

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,6 +59,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="35dp"
             android:background="@color/black"
+            android:onClick="landingPage"
             android:text="@string/submit"
             android:textColor="@color/white" />
 
