--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -44,6 +44,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="35dp"
         android:background="@color/black"
+        android:onClick="mainPage"
         android:text="@string/submit"
         android:textColor="@color/white" />
 
