--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -138,6 +138,7 @@
             android:background="@color/black"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="30dp"
+            android:onClick="mainPage"
             android:text="@string/submit"
             android:textColor="@color/white" />
     </android.widget.RelativeLayout>
