--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorBasic">#80F8F7F7</color>
+    <color name="colorBasicFull">#E6F8F7F7</color>
     <color name="colorRose">#EFE5DE</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="purple">#800080</color>
 </resources>
