3/20 - Forgot Password updated. Successful retrieval of account info.

--- a/app/src/main/res/layout/activity_forgot_password2.xml
+++ b/app/src/main/res/layout/activity_forgot_password2.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/login_signup_forgot"
-    tools:context="com.intrinsic.cid.intrinsic.ForgotPassword">
+    tools:context="com.intrinsic.cid.intrinsic.ForgotPassword2">
 
     <TextView
         android:id="@+id/forgot_password_text"
@@ -22,7 +22,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/email_question"
+        android:id="@+id/security_question"
         android:layout_width="290dp"
         android:layout_height="25dp"
         android:layout_below="@+id/forgot_password_text"
@@ -30,61 +30,31 @@
         android:layout_marginTop="17dp"
         android:background="@color/colorBasic"
         android:ems="10"
-        android:text="@string/email_question"
+        android:text=""
         android:paddingHorizontal="10dp"
         android:textColor="@color/black"
         android:textSize="17sp" />
 
     <EditText
-        android:id="@+id/retrieve_password_through_email"
+        android:id="@+id/security_answer"
         android:layout_width="290dp"
         android:layout_height="40dp"
-        android:layout_below="@+id/email_question"
+        android:layout_below="@+id/security_question"
         android:layout_marginTop="5dp"
         android:background="@color/colorBasic"
         android:layout_centerHorizontal="true"
         android:ems="10"
-        android:hint="@string/email"
+        android:hint="@string/answer"
         android:paddingHorizontal="10dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:textSize="17sp"/>
-
-    <TextView
-        android:id="@+id/birthdate_question"
-        android:layout_width="290dp"
-        android:layout_height="25dp"
-        android:layout_below="@+id/retrieve_password_through_email"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="17dp"
-        android:background="@color/colorBasic"
-        android:ems="10"
-        android:paddingHorizontal="10dp"
-        android:text="@string/birthdate_question"
-        android:textColor="@color/black"
         android:textSize="17sp" />
-
-    <EditText
-        android:id="@+id/retrieve_password_through_birthdate"
-        android:layout_width="290dp"
-        android:layout_height="40dp"
-        android:layout_below="@+id/birthdate_question"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
-        android:background="@color/colorBasic"
-        android:ems="10"
-        android:hint="@string/birthdate_mm_dd_yy"
-        android:inputType="text"
-        android:paddingHorizontal="10dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        android:textSize="17sp"/>
 
     <Button
         android:id="@+id/retrieve_password_submit"
         android:layout_width="110dp"
         android:layout_height="30dp"
-        android:layout_below="@+id/retrieve_password_through_birthdate"
+        android:layout_below="@+id/security_answer"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         android:background="@color/black"
