3/20 - Forgot Password updated. Successful retrieval of account info.

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -22,29 +22,28 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/email_question"
+        android:id="@+id/phone_question"
         android:layout_width="290dp"
         android:layout_height="25dp"
         android:layout_below="@+id/forgot_password_text"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="17dp"
-        android:background="@color/colorBasic"
         android:ems="10"
-        android:text="@string/email_question"
+        android:text="What is your phone number?"
         android:paddingHorizontal="10dp"
         android:textColor="@color/black"
         android:textSize="17sp" />
 
     <EditText
-        android:id="@+id/retrieve_password_through_email"
+        android:id="@+id/retrieve_password_through_phone"
         android:layout_width="290dp"
         android:layout_height="40dp"
-        android:layout_below="@+id/email_question"
+        android:layout_below="@+id/phone_question"
         android:layout_marginTop="5dp"
         android:background="@color/colorBasic"
         android:layout_centerHorizontal="true"
         android:ems="10"
-        android:hint="@string/email"
+        android:hint="@string/phone_number"
         android:paddingHorizontal="10dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -54,10 +53,9 @@
         android:id="@+id/birthdate_question"
         android:layout_width="290dp"
         android:layout_height="25dp"
-        android:layout_below="@+id/retrieve_password_through_email"
+        android:layout_below="@+id/retrieve_password_through_phone"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="17dp"
-        android:background="@color/colorBasic"
         android:ems="10"
         android:paddingHorizontal="10dp"
         android:text="@string/birthdate_question"
