3/26 - Updated signup procedure.

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -41,6 +41,7 @@
         android:layout_below="@+id/phone_question"
         android:layout_marginTop="5dp"
         android:background="@color/colorBasic"
+        android:inputType="phone"
         android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="@string/phone_number"
@@ -71,7 +72,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/colorBasic"
         android:ems="10"
-        android:hint="@string/birthdate_mm_dd_yy"
+        android:hint="@string/birthdate_mm_dd_yyyy"
         android:inputType="text"
         android:paddingHorizontal="10dp"
         android:textColor="@color/black"
