- Made images in drawable xxhdpi folder, as well as regular drawable folder. This fixes the issue of higher resolution phones crashing because the resolution of the images in the regular drawable folder was too low

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -109,7 +109,7 @@
             android:ems="10"
             android:background="@color/colorBasic"
             android:layout_marginTop="10dp"
-            android:inputType="text"
+            android:inputType="date"
             android:hint="@string/birthdate_mm_dd_yyyy"
             android:paddingHorizontal="10dp"
             android:textColorHint="@color/black"
@@ -124,7 +124,7 @@
             android:ems="10"
             android:background="@color/colorBasic"
             android:layout_marginTop="10dp"
-            android:inputType="text"
+            android:inputType="textEmailAddress"
             android:hint="Email:"
             android:paddingHorizontal="10dp"
             android:textColorHint="@color/black"
