--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/contact"
+    android:background="@drawable/contactus"
     tools:context="com.intrinsic.cid.intrinsic.ContactUsActivity">
 
 </android.widget.RelativeLayout>
