--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -71,6 +71,7 @@
             android:layout_marginStart="45dp"
             android:layout_marginTop="280dp"
             android:background="@drawable/rounded_button"
+            android:onClick="menuPage"
             android:text="@string/menu"
             android:textColor="@color/black"
             android:layout_alignParentStart="true" />
