--- a/app/src/main/res/layout/content_menu_bubble_tea.xml
+++ b/app/src/main/res/layout/content_menu_bubble_tea.xml
@@ -11,52 +11,57 @@
     tools:context="com.intrinsic.cid.intrinsic.MenuBubbleTeaActivity">
 
     <Button
-        android:id="@+id/bubble_button"
+        android:id="@+id/button1"
+        android:clickable="false"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:text="Bubble Teas"
+        android:text="Almond"
         android:textAlignment="center"
         android:textSize="20sp"
         android:layout_marginTop="40dp"
         android:layout_centerHorizontal="true"/>
     <Button
-        android:id="@+id/brewed_button"
-        android:text="Brewed Teas"
+        android:id="@+id/button2"
+        android:clickable="false"
+        android:text="Banana"
         android:textAlignment="center"
         android:textSize="20sp"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_below="@+id/bubble_button"
+        android:layout_below="@+id/button1"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"/>
     <Button
-        android:id="@+id/smoothies_button"
-        android:text="Smoothies/Slushies"
+        android:id="@+id/button3"
+        android:clickable="false"
+        android:text="Blueberry"
         android:textAlignment="center"
         android:textSize="20sp"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_below="@+id/brewed_button"
+        android:layout_below="@+id/button2"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true" />
     <Button
-        android:id="@+id/milkshake_button"
-        android:text="Milkshakes"
+        android:id="@+id/button4"
+        android:clickable="false"
+        android:text="Chocolate"
         android:textAlignment="center"
         android:textSize="20sp"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_below="@+id/smoothies_button"
+        android:layout_below="@+id/button3"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true" />
     <Button
-        android:id="@+id/coffee_button"
-        android:text="Coffee/Other Drinks"
+        android:id="@+id/button5"
+        android:clickable="false"
+        android:text="Coconut"
         android:textAlignment="center"
         android:textSize="20sp"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_below="@+id/milkshake_button"
+        android:layout_below="@+id/button4"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true" />
 </android.widget.RelativeLayout>
