--- a/app/src/main/res/layout/content_spotify.xml
+++ b/app/src/main/res/layout/content_spotify.xml
@@ -62,8 +62,7 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_below="@+id/playlist1"
-                    android:layout_toEndOf="@+id/message"
-                    android:layout_toRightOf="@+id/message"
+                    android:layout_toRightOf="@+id/playlist1"
                     android:contentDescription="right arrow"
                     android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
 
